added offers component